# Chinese-chess

./: .gitignore  .gitlab-ci.yml  ARM_COMPATIBILITY.md  BUILD.md  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  command.md  hello_test.cc  main  main.cpp  mainTest.cc  mainUnitTest.cpp  run_game.sh  tmux_start.sh
.devcontainer/: Dockerfile  devcontainer.json  setup.sh  user-setup.sh
cmake/: FindFinalcut.cmake
doc/: BUILD.md  CHECKMATE_DETECTION.md  DEVCONTAINER_USER_CONFIG.md  FINALCUT_INTEGRATION.md  FUNCTION_CALL_REFERENCE.md  MACOS_SUPPORT.md  PROJECT_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  REFACTOR_SUMMARY.md  WEBSOCKPP_SMOKE_TEST.md
final/: fconfig.h
final-m1/: fconfig.h
gtest/: gtest-all.cc  gtest-death-test.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest.cc
libfinal-m1/lib/: libfinal.la  libfinal.so.0.8.1
libfinal/lib/: libfinal.so.0.8.1
libfinal/lib/pkgconfig/: finalcut.pc
logic/: board.cpp  board.h  chessman.cpp  chessman.h  iBoard.h  iChessman.cpp  iChessman.h
logic/inc/: board.h  chessman.h  iBoard.h  iChessman.h  moveCache.h  umpire.h
logic/src/: board.cpp  chessman.cpp  moveCache.cpp  umpire.cpp
reference/Email/: abstracEmailBuilder.h  abstractEmailBuilder.cpp  email.cpp  email.h  emailBodyBuilder.h  emailBuilder.h  emailHeaderBuilder.h  main.cpp
rule/: abstractRuleBuilder.h  rule.cpp  rule.h  ruleLimitBuilder.cpp  ruleLimitBuilder.h  ruleShapeBuilder.cpp  ruleShapeBuilder.h  ruleTargetBuilder.cpp  ruleTargetBuilder.h
rule/behaviorProvider/: abstractBehaviorProvider.cpp  abstractBehaviorProvider.h  advisorBehaviorProvider.cpp  advisorBehaviorProvider.h  cannonBehaviorProvider.cpp  cannonBehaviorProvider.h  chariotBehaviorProvider.cpp  chariotBehaviorProvider.h  defaultBehaviorProvider.cpp  defaultBehaviorProvider.h  directionIterator.cpp  directionIterator.h  elephantBehaviorProvider.cpp  elephantBehaviorProvider.h  generalBehaviorProvider.cpp  generalBehaviorProvider.h  horseBehaviorProvider.cpp  horseBehaviorProvider.h  soldierBehaviorProvider.cpp  soldierBehaviorProvider.h
rule/behaviorProvider/inc/: abstractBehaviorProvider.h  advisorBehaviorProvider.h  cannonBehaviorProvider.h  chariotBehaviorProvider.h  defaultBehaviorProvider.h  directionIterator.h  elephantBehaviorProvider.h  generalBehaviorProvider.h  horseBehaviorProvider.h  soldierBehaviorProvider.h
rule/behaviorProvider/src/: abstractBehaviorProvider.cpp  advisorBehaviorProvider.cpp  cannonBehaviorProvider.cpp  chariotBehaviorProvider.cpp  defaultBehaviorProvider.cpp  directionIterator.cpp  elephantBehaviorProvider.cpp  generalBehaviorProvider.cpp  horseBehaviorProvider.cpp  soldierBehaviorProvider.cpp
rule/inc/: abstractRuleBuilder.h  rule.h  ruleLimitBuilder.h  ruleShapeBuilder.h  ruleTargetBuilder.h
rule/src/: rule.cpp  ruleLimitBuilder.cpp  ruleShapeBuilder.cpp  ruleTargetBuilder.cpp
scripts/: build.sh  build_finalcut.sh  install_deps.sh  run_tests.sh  test_build.sh  test_run.sh
test/: mockBoard.h  mockChessman.h  pointTest.cc  ruleTest.cc  testUtils.h  utilsTest.cc  websocketClient.cpp
tools/: websockpp_client_smoke.cpp  websockpp_server_smoke.cpp
ui/: BoardDialog.cpp  BoardDialog.h  boardDialog.h  pieceButton.cpp  pieceButton.h  spaceButton.cpp  spaceButton.h  ui.cpp
ui/button/: IButton.h  pieceButton.cpp  pieceButton.h  spaceButton.cpp  spaceButton.h  spaceButtonText.cpp  spaceButtonText.h
ui/inc/: boardDialog.h  configDialog.h  iChain.h  iDialogChain.h  introDialog.h  mainDialog.h  moveManager.h  ui.h
ui/label/: ILabel.cpp  ILabel.h  debugLabel.cpp  debugLabel.h  fortressLabels.cpp  fortressLabels.h  horizontalLabels.cpp  horizontalLabels.h  pieceLabel.cpp  pieceLabel.h  riverBorderLabels.cpp  riverBorderLabels.h  spaceLabel.cpp  spaceLabel.h  teamSignalLabels.cpp  teamSignalLabels.h  verticalLineLabels.cpp  verticalLineLabels.h
ui/label/inc/: ILabel.h  debugLabel.h  endGameLabel.h  horizontalLabels.h  introLabel.h  ipListSelection.h  modeSelection.h  modeSelectionRadioButton.h  pieceLabel.h  riverBorderLabels.h  selectableChain.h  spaceLabel.h  teamSelection.h  teamSignalLabels.h  verticalLineLabels.h  waitingForClientTextView.h
ui/label/src/: ILabel.cpp  debugLabel.cpp  endGameLabel.cpp  fortressLabels.cpp  horizontalLabels.cpp  hostSelection.cpp  introLabel.cpp  modeSelection.cpp  modeSelectionRadioButton.cpp  pieceLabel.cpp  riverBorderLabels.cpp  selectableChain.cpp  spaceLabel.cpp  teamSelection.cpp  teamSignalLabels.cpp  verticalLineLabels.cpp  waitingForClientTextView.cpp
ui/selection/inc/: configurator.h  hostSelection.h  ipListSelection.h  ipSelection.h  modeSelection.h  radioButtonChain.h  selectableChain.h  teamSelection.h  waitableChain.h
ui/selection/src/: configurator.cpp  hostSelection.cpp  ipListSelection.cpp  ipSelection.cpp  modeSelection.cpp  radioButtonChain.cpp  selectableChain.cpp  teamSelection.cpp  waitableChain.cpp
ui/src/: BoardDialog.cpp  MainDialog.cpp  boardDialog.cpp  configDialog.cpp  iChain.cpp  iDialogChain.cpp  introDialog.cpp  moveManager.cpp  ui.cpp
ui/turn/: ITurn.cpp  ITurn.h  debugTurn.cpp  debugTurn.h  offlineTurn.cpp  offlineTurn.h
ui/turn/inc/: ITurn.h  debugTurn.h  offlineTurn.h  onlineTurn.h
ui/turn/src/: ITurn.cpp  debugTurn.cpp  offlineTurn.cpp  onlineTurn.cpp
utils/: constant.cpp  constant.h  point.cc  point.cpp  point.h  utils.cpp  utils.h
utils/inc/: constant.h  log.h  point.h  utils.h
utils/src/: constant.cpp  log.cpp  point.cpp  utils.cpp
websockpp/inc/: client.h  connectionBase.h  iConnection.h  server.h  transfer.h  wConfig.h  websockpp.h
websockpp/src/: client.cpp  connectionBase.cpp  server.cpp  transfer.cpp  wConfig.cpp
